// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectAdminParticipant /> should render a non-selectable list when "emailing" is disabled 1`] = `
Array [
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div
    className="styles__Container-fmDIgl iKKqeY pickableList-row ProjectAdminParticipantstyle__Container-gBxtgi eWyfNu"
  >
    <div
      className="styles__ChildWrapper-gACLRm pickableList-row-content"
      selected={false}
    >
      <div
        className="ProjectAdminParticipantstyle__ParticipantInfo-eKEAyg ivxndD"
      >
        <div
          className="ProjectAdminParticipantstyle__UsernameContainer-fgfHrI jBpEnu"
        >
          <a
            href="<mock-value-for-field-\\"adminUrl\\">"
          >
            &lt;mock-value-for-field-"username"&gt;
          </a>
        </div>
        <div
          className="ProjectAdminParticipantstyle__NameContainer-dDCFfd brFOlC"
        >
          <span>
            &lt;mock-value-for-field-"firstname"&gt; &lt;mock-value-for-field-"lastname"&gt;
          </span>
          <span
            className="separator"
          >
            •
          </span>
          active.on.date {"date":"2 avr. 2021"}
        </div>
        <ul
          className="InlineList__Container-jBwJNT lbXmrW inline-list"
          margin={true}
          separator=" "
        >
          <li>
            <button
              onClick={[Function]}
              type="button"
            >
              <IconMock
                aria-hidden={true}
                className="icon"
                fill="#707070"
                focusable={false}
                height={12}
                style={
                  Object {
                    "flexShrink": "0",
                    "verticalAlign": "middle",
                  }
                }
                width={12}
              />
              <span>
                &lt;mock-value-for-field-"name"&gt;
              </span>
            </button>
          </li>
          <li>
            <IconMock
              aria-hidden={true}
              className="icon"
              fill="#707070"
              focusable={false}
              height={12}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
              width={12}
            />
            <span>
              &lt;mock-value-for-field-"email"&gt;
            </span>
          </li>
          <li>
            <IconMock
              aria-hidden={true}
              className="icon"
              fill="#707070"
              focusable={false}
              height={12}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
              width={12}
            />
            global.votes {"num":42}
          </li>
          <li>
            <IconMock
              aria-hidden={true}
              className="icon"
              fill="#707070"
              focusable={false}
              height={12}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
              width={12}
            />
            synthesis.common.elements.nb {"num":42}
          </li>
        </ul>
      </div>
      <span
        className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
        hasBadge={false}
      >
        <div
          className="sc-bcXGCL KmVep sc-ckEbfr gIIayp cap-avatar"
        >
          <img
            alt="<mock-value-for-field-\\"username\\">"
            className="sc-bcXGCL gCRbeu"
            src="<mock-value-for-field-\\"avatarUrl\\">"
          />
        </div>
      </span>
    </div>
  </div>,
]
`;

exports[`<ProjectAdminParticipant /> should render a selectable list when "emailing" is enabled 1`] = `
Array [
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div
    className="styles__Container-fmDIgl iKKqeY pickableList-row ProjectAdminParticipantstyle__Container-gBxtgi eWyfNu"
  >
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="styles__ChildWrapper-gACLRm pickableList-row-content"
      selected={false}
    >
      <div
        className="ProjectAdminParticipantstyle__ParticipantInfo-eKEAyg ivxndD"
      >
        <div
          className="ProjectAdminParticipantstyle__UsernameContainer-fgfHrI jBpEnu"
        >
          <a
            href="<mock-value-for-field-\\"adminUrl\\">"
          >
            &lt;mock-value-for-field-"username"&gt;
          </a>
        </div>
        <div
          className="ProjectAdminParticipantstyle__NameContainer-dDCFfd brFOlC"
        >
          <span>
            &lt;mock-value-for-field-"firstname"&gt; &lt;mock-value-for-field-"lastname"&gt;
          </span>
          <span
            className="separator"
          >
            •
          </span>
          active.on.date {"date":"2 avr. 2021"}
        </div>
        <ul
          className="InlineList__Container-jBwJNT lbXmrW inline-list"
          margin={true}
          separator=" "
        >
          <li>
            <button
              onClick={[Function]}
              type="button"
            >
              <IconMock
                aria-hidden={true}
                className="icon"
                fill="#707070"
                focusable={false}
                height={12}
                style={
                  Object {
                    "flexShrink": "0",
                    "verticalAlign": "middle",
                  }
                }
                width={12}
              />
              <span>
                &lt;mock-value-for-field-"name"&gt;
              </span>
            </button>
          </li>
          <li>
            <IconMock
              aria-hidden={true}
              className="icon"
              fill="#707070"
              focusable={false}
              height={12}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
              width={12}
            />
            <span>
              &lt;mock-value-for-field-"email"&gt;
            </span>
          </li>
          <li>
            <IconMock
              aria-hidden={true}
              className="icon"
              fill="#707070"
              focusable={false}
              height={12}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
              width={12}
            />
            global.votes {"num":42}
          </li>
          <li>
            <IconMock
              aria-hidden={true}
              className="icon"
              fill="#707070"
              focusable={false}
              height={12}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
              width={12}
            />
            synthesis.common.elements.nb {"num":42}
          </li>
        </ul>
      </div>
      <span
        className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
        hasBadge={false}
      >
        <div
          className="sc-bcXGCL KmVep sc-ckEbfr gIIayp cap-avatar"
        >
          <img
            alt="<mock-value-for-field-\\"username\\">"
            className="sc-bcXGCL gCRbeu"
            src="<mock-value-for-field-\\"avatarUrl\\">"
          />
        </div>
      </span>
    </div>
  </div>,
]
`;
